zz-out/pass14_run2/zz-scripts/chapter08/plot_fig01_chi2_total_vs_q0.err
  File "/home/jplal/MCGT/zz-scripts/chapter08/plot_fig01_chi2_total_vs_q0.py", line 62
    ax.annotate(
               ^
SyntaxError: '(' was never closed
